refactor: change task field type

--- a/apidoc/api_project.json
+++ b/apidoc/api_project.json
@@ -2,13 +2,13 @@
   "name": "task tracker",
   "version": "0.0.1",
   "description": "Task Tracker api documentation",
-  "title": "Helpdesk api",
+  "title": "Task tracker api",
   "sampleUrl": "http://localhost:8888/",
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2021-09-01T13:13:36.499Z",
+    "time": "2021-09-02T09:02:21.528Z",
     "url": "https://apidocjs.com",
     "version": "0.26.0"
   }
